feat: syncStatus api and rollupConfig api